Fix alignment of components so that they are uniform throughout the app

--- a/src/styles/CardContainer.css
+++ b/src/styles/CardContainer.css
@@ -1,8 +1,8 @@
 .card-container{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   flex-wrap: wrap;
-  padding: 30px;
+  padding: 30px 5vw;
   min-height: calc(100vh - 98px - 56px);
 }
 
