--- a/src/styles/SearchContainer.css
+++ b/src/styles/SearchContainer.css
@@ -1,7 +1,7 @@
 .search-container{
   display: flex;
   justify-content: space-between;
-  padding: 30px;
+  padding: 30px 5vw;
 }
 
 .flex-40{
